--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -23,7 +23,7 @@ body.lock {
 }
 
 body {
-   font-family: "Montserrat", sans-serif;
+   font-family: "Roboto", sans-serif;
    @extend%roboto-400;
    font-size: 16px;
    background: #f1f1f1;
